# Ableton-midi-bench

./: # Create and activate a virtual environm.ps1  .gitignore  Archive Project.ps1  DEFINITIONS.md  README.md  midi_bench_gui_config - Copy.json  midi_bench_gui_config.json  package.json  pyproject.toml  requirements.txt  runui.ps1  scratch.sql  smoke_test_sql_load.py
ableton-midi-bench/: .gitignore  README.md  pyproject.toml  requirements.txt
ableton-midi-bench/src/midi_benchmark/: cli_compare.py  loader.py  matcher.py  metrics.py  report.py
ableton-midi-bench/src/midi_benchmark.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ableton-midi-bench/tests/: test_smoke.py
data/: performance_comping take 2025-08-25 0817.mid  performance_melody_take1.mid  reference_melody.mid
sql/: alter_tables_add_provenance.sql
src/midi_benchmark/: __init__.py  cfg.py  cli_compare.py  loader.py  matcher.py  metrics.py  midi_bench_gui.py  report.py  sql_config.py  sql_load.py
src/midi_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
tools/: .env.template  activate-project.ps1  apply_sql.ps1  backup.sql  backup_db.ps1  schedule_backup.xml
tools/sql/: 01_indexes_views.sql
